--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 - sudo apt-get install -y zip sudo wget bzip2 tar -y --force-yes
 - sudo apt-get clean
 - wget -O bootstrap.py https://hg.mozilla.org/mozilla-central/raw-file/default/python/mozboot/bin/bootstrap.py
-  && sudo python bootstrap.py
+  && sudo python bootstrap.py --application-choice desktop
 install:
 - wget "http://ftp.mozilla.org/pub/thunderbird/releases/`cat release`/source/thunderbird-`cat
   release`.source.tar.bz2"
