--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ before_install:
 - sudo apt-get update -y
 - sudo apt-get install -y zip sudo wget bzip2 tar -y --force-yes
 - sudo apt-get clean
+- sudo echo "alias add-apt-repository='add-apt-repository -y'" >> /root/.bashrc
+- . .bashrc
 - wget -O bootstrap.py https://hg.mozilla.org/mozilla-central/raw-file/default/python/mozboot/bin/bootstrap.py
   && sudo python bootstrap.py --application-choice desktop --no-interactive
 install:
