--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ before_install:
 - sudo apt-get clean
 - echo "alias add-apt-repository='add-apt-repository -y'" >> ~/.bashrc
 - echo "alias add-apt-repository='add-apt-repository -y'"  | sudo tee --append /root/.bashrc
+- alias add-apt-repository='add-apt-repository -y'
+- sudo alias add-apt-repository='add-apt-repository -y'
 - wget -O bootstrap.py https://hg.mozilla.org/mozilla-central/raw-file/default/python/mozboot/bin/bootstrap.py
   && sudo python bootstrap.py --application-choice desktop --no-interactive
 install:
