--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 - echo "alias sudo='sudo '"  | sudo tee --append /root/.bashrc
 - alias add-apt-repository='add-apt-repository -y'
 - alias sudo='sudo '
+- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key 323293EE
 - wget -O bootstrap.py https://hg.mozilla.org/mozilla-central/raw-file/default/python/mozboot/bin/bootstrap.py
   && sudo python bootstrap.py --application-choice desktop --no-interactive
 install:
