--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 - alias add-apt-repository='add-apt-repository -y'
 - alias sudo='sudo '
 - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key 323293EE
+- sudo add-apt-repository -y ppa:mercurial-ppa/releases
 - wget -O bootstrap.py https://hg.mozilla.org/mozilla-central/raw-file/default/python/mozboot/bin/bootstrap.py
   && sudo python bootstrap.py --application-choice desktop --no-interactive
 install:
