--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,17 @@ python:
 - '2.7'
 sudo: required
 before_install:
+- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key 323293EE
+- sudo add-apt-repository -y ppa:mercurial-ppa/releases
+- sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get update -y
-- sudo apt-get install -y zip sudo wget bzip2 tar -y --force-yes
+- sudo apt-get install -y zip sudo wget bzip2 tar gcc-4.7 -y --force-yes
 - sudo apt-get clean
 - echo "alias add-apt-repository='add-apt-repository -y'" >> ~/.bashrc
 - echo "alias add-apt-repository='add-apt-repository -y'"  | sudo tee --append /root/.bashrc
 - echo "alias sudo='sudo '"  | sudo tee --append /root/.bashrc
 - alias add-apt-repository='add-apt-repository -y'
 - alias sudo='sudo '
-- sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key 323293EE
-- sudo add-apt-repository -y ppa:mercurial-ppa/releases
 - wget -O bootstrap.py https://hg.mozilla.org/mozilla-central/raw-file/default/python/mozboot/bin/bootstrap.py
   && sudo python bootstrap.py --application-choice desktop --no-interactive
 install:
