--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,16 @@ before_install:
 - sudo add-apt-repository -y ppa:mercurial-ppa/releases
 - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
 - sudo apt-get update -y
-- sudo apt-get install -y zip sudo wget bzip2 tar gcc-4.7 -y --force-yes
+- sudo apt-get install -y zip sudo wget bzip2 tar gcc-4.7 g++-4.7 c++-4.7 -y --force-yes
 - sudo apt-get clean
-- sudo rm /usr/bin/gcc
-- sudo ln -s /usr/bin/gcc-4.7 /usr/bin/gcc
-- echo "alias add-apt-repository='add-apt-repository -y'" >> ~/.bashrc
-- echo "alias add-apt-repository='add-apt-repository -y'"  | sudo tee --append /root/.bashrc
-- echo "alias sudo='sudo '"  | sudo tee --append /root/.bashrc
-- alias add-apt-repository='add-apt-repository -y'
-- alias sudo='sudo '
+#- sudo rm /usr/bin/gcc
+#- sudo ln -s /usr/bin/gcc-4.7 /usr/bin/gcc
+- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.6 --slave /usr/bin/c++ c++ /usr/bin/c++-4.6
+- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7 --slave /usr/bin/c++ c++ /usr/bin/c++-4.7
+- sudo update-alternatives --config gcc
+- gcc --version
+- g++ --version
+- c++ --version
 - wget -O bootstrap.py https://hg.mozilla.org/mozilla-central/raw-file/default/python/mozboot/bin/bootstrap.py
   && sudo python bootstrap.py --application-choice desktop --no-interactive
 install:
