Eighteenth build test (38.1.0)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_install:
 - sudo apt-get clean
 #- sudo rm /usr/bin/gcc
 #- sudo ln -s /usr/bin/gcc-4.7 /usr/bin/gcc
-- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.6 --slave /usr/bin/c++ c++ /usr/bin/c++-4.6
-- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7 --slave /usr/bin/c++ c++ /usr/bin/c++-4.7
+- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.6
+- sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7
 - sudo update-alternatives --config gcc
 - gcc --version
 - g++ --version
