Nineteenth build test (38.1.0)

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 #- sudo ln -s /usr/bin/gcc-4.7 /usr/bin/gcc
 - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.6
 - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7
-- sudo update-alternatives --config gcc
+- sudo update-alternatives --set gcc /usr/bin/gcc-4.7
 - gcc --version
 - g++ --version
 - c++ --version
