--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,9 +27,7 @@ cache:
   - packages -> **\packages.config  # preserve "packages" directory in the root of build folder but will reset it if packages.config is modified
   - projectA\libs
   - node_modules                    # local npm modules
-  - %APPDATA%\npm-cache             # npm cache
-
-# scripts that run after cloning repository
+  - %APPDATA%\npm-cache
 install:
 #  - echo This is batch
 #  - ps: Write-Host 'This is PowerShell'
