--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,16 +32,25 @@ install:
 #  - echo This is batch
 #  - ps: Write-Host 'This is PowerShell'
 #  - cmd: echo This is batch again
-  - cmd: curl -LO https://ftp.mozilla.org/pub/mozilla.org/mozilla/libraries/win32/MozillaBuildSetup-Latest.exe
+  - cmd: echo "Running install section"
+  - cmd: chdir
+  - set /p RELEASEVERSION=<release
+  - echo %RELEASEVERSION%
+#  - cmd: curl -LO https://ftp.mozilla.org/pub/mozilla.org/mozilla/libraries/win32/MozillaBuildSetup-Latest.exe
+  - ps: Start-FileDownload 'https://ftp.mozilla.org/pub/mozilla.org/mozilla/libraries/win32/MozillaBuildSetup-Latest.exe'
   - cmd: MozillaBuildSetup-Latest.exe /S
+#  - cmd: curl -LO http://ftp.mozilla.org/pub/thunderbird/releases/%RELEASEVERSION%/source/thunderbird-%RELEASEVERSION%.source.tar.bz2
+  - ps: Start-FileDownload 'http://ftp.mozilla.org/pub/thunderbird/releases/%RELEASEVERSION%/source/thunderbird-%RELEASEVERSION%.source.tar.bz2'
+  - cmd: 7z e thunderbird-%RELEASEVERSION%.source.tar.bz2
+  - cmd: 7z x thunderbird-%RELEASEVERSION%.source.tar
 
 # enable patching of AssemblyInfo.* files
-assembly_info:
-  patch: true
-  file: AssemblyInfo.*
-  assembly_version: "2.2.{build}"
-  assembly_file_version: "{version}"
-  assembly_informational_version: "{version}"
+#assembly_info:
+#  patch: true
+#  file: AssemblyInfo.*
+#  assembly_version: "2.2.{build}"
+#  assembly_file_version: "{version}"
+#  assembly_informational_version: "{version}"
 platform: x64
 configuration: Release
 before_build:
@@ -52,14 +61,14 @@ build_script:
 #       tests configuration       #
 #---------------------------------#
 
-test:
-  assemblies:
-    - asm1.dll
-    - asm2.dll
-
-  categories:
-    - UI
-    - E2E
+#test:
+#  assemblies:
+#    - asm1.dll
+#    - asm2.dll
+#
+#  categories:
+#    - UI
+#    - E2E
 
 # to run tests from different categories as separate jobs in parallel
 #test:
@@ -69,55 +78,55 @@ test:
 #    - [DAL, BL]    # 2nd job
 
 # scripts to run before tests
-before_test:
-  - echo script1
-  - ps: Write-Host "script1"
+#before_test:
+#  - echo script1
+#  - ps: Write-Host "script1"
 
 # scripts to run after tests
-after_test:
+#after_test:
 
 # to run your custom scripts instead of automatic tests
-test_script:
-  - echo This is my custom test script
+#test_script:
+#  - echo This is my custom test script
 
 # to disable automatic tests 
-#test: off
+test: off
 
 
 #---------------------------------#
 #      artifacts configuration    #
 #---------------------------------#
 
-artifacts:
+#artifacts:
+#
+#  # pushing a single file
+#  - path: test.zip
+#
+#  # pushing a single file with environment variable in path and "Deployment name" specified
+#  - path: MyProject\bin\$(configuration)
+#    name: myapp
+#
+#  # pushing entire folder as a zip archive
+#  - path: logs
+#
+#  # pushing all *.nupkg files in directory
+#  - path: out\*.nupkg
 
-  # pushing a single file
-  - path: test.zip
-
-  # pushing a single file with environment variable in path and "Deployment name" specified
-  - path: MyProject\bin\$(configuration)
-    name: myapp
-
-  # pushing entire folder as a zip archive
-  - path: logs
-
-  # pushing all *.nupkg files in directory
-  - path: out\*.nupkg
-
-deploy:
-  - provider: GitHub
-    artifact: /.*\.nupkg/           # upload all NuGet packages to release assets
-    draft: false
-    prerelease: false
-    on:
-      branch: master                # release from master branch only
-      appveyor_repo_tag: true       # deploy on tag push only
-before_deploy:
-after_deploy:
-deploy_script:
+#deploy:
+#  - provider: GitHub
+#    artifact: /.*\.nupkg/           # upload all NuGet packages to release assets
+#    draft: false
+#    prerelease: false
+#    on:
+#      branch: master                # release from master branch only
+#      appveyor_repo_tag: true       # deploy on tag push only
+#before_deploy:
+#after_deploy:
+#deploy_script:
 
 on_success:
-  - do something
+  - echo "success"
 on_failure:
-  - do something
+  - echo "failure"
 on_finish:
-  - do something
+  - echo "finish"
